# opossum

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  README  configure  solve-example.sh
benchmarks/: benchmarks.sh  objectives.sh  opossum.awk  ppbench.sh  usecase.sh
benchmarks/instances/: README
include/libgexf/: abstractiter.h  abstractparser.h  attributeiter.h  attvalueiter.h  conv.h  data.h  directedgraph.h  dynamicgraph.h  edgeiter.h  exceptions.h  filereader.h  filewriter.h  gexf.h  gexfparser.h  graph.h  legacyparser.h  legacywriter.h  libgexf.h  memoryvalidator.h  metadata.h  nodeiter.h  rngvalidator.h  schemavalidator.h  typedefs.h  undirectedgraph.h
lib/linux/: .gitignore
resources/cplex/: set-xsl.sh  solution.xsd  solution.xsl
resources/rng/: viz.rng
resources/xsd/: data.xsd  viz.xsd
src/: CMakeLists.txt  GexfGen.cpp  GexfGen.hpp  Utils.hpp  abstract_combiner.h  abstract_criteria.h  abstract_solver.h  agregate_combiner.c  agregate_combiner.h  bandw_criteria.c  bandw_criteria.h  binomial_quiz.cpp.example  combiner.h  conn_criteria.c  conn_criteria.h  constraint_generation.c  constraint_generation.h  cplex_solver.c  cplex_solver.h  criteria.h  cudf.c  cudf.h  glpk_solver.c  glpk_solver.h  graphviz.cpp  graphviz.hpp  header.h.example  lexagregate_combiner.c  lexagregate_combiner.h  lexicographic_combiner.c  lexicographic_combiner.h  leximax_combiner.c  leximax_combiner.h  leximin_combiner.c  leximin_combiner.h  lexleximax_combiner.c  lexleximax_combiner.h  lexleximin_combiner.c  lexleximin_combiner.h  lexsemiagregate_combiner.c  (+22 more)
test/: CMakeLists.txt  main.cpp
tools/share/cmake/: FindCPLEX.cmake  FindGLPK.cmake  FindLPSOLVE.cmake  FindXML2.cmake  cotire.cmake
