
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin/${CMAKE_BUILD_TYPE}")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/bin/${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES("${MAINFOLDER}/src")

#FORCE CXX COMPILATION FOR ALL SOURCES FILES
FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c)
FOREACH (SRC_FILE ${project_SRCS})
	set_source_files_properties(${SRC_FILE} PROPERTIES LANGUAGE CXX)
ENDFOREACH (SRC_FILE ${project_SRCS})

SET (project_LIBS ${Boost_LIBRARIES} ${GLPK_LIBRARIES} ${LPSOLVE_LIBRARIES}  ilocplex cplex concert pthread m)
SET (project_BIN ${PROJECT_NAME})

#QT4_WRAP_CPP(project_MOC_SRCS_GENERATED ${project_MOC_HEADERS})
ADD_EXECUTABLE(${project_BIN} ${project_SRCS})

#ADD_LIBRARY(
#	"gexf"
#	STATIC
#	${project_SRCS}
#)

TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

#INSTALL(TARGETS ${project_BIN} DESTINATION bin)
