
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin/${CMAKE_BUILD_TYPE}")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/bin/${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES("${MAINFOLDER}/src")

#FORCE CXX COMPILATION FOR ALL SOURCES FILES
FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c)

FOREACH (SRC_FILE ${project_SRCS})
	set_source_files_properties(${SRC_FILE} PROPERTIES LANGUAGE CXX)
ENDFOREACH (SRC_FILE ${project_SRCS})

#Remove unwanted solver source files
IF(NOT CPLEX_FOUND)
LIST(REMOVE_ITEM project_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/cplex_solver.c")
ENDIF()

IF(NOT GLPK_FOUND)
LIST(REMOVE_ITEM project_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/glpk_solver.c")
ENDIF()

IF(NOT LPSOLVE_FOUND)
LIST(REMOVE_ITEM project_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/lpsolve_solver.c")
ENDIF()

SET (project_LIBS ${Boost_LIBRARIES} ${GLPK_LIBRARIES} ${LPSOLVE_LIBRARIES} ${CPLEX_LIBRARIES})
SET (project_BIN ${PROJECT_NAME})

#QT4_WRAP_CPP(project_MOC_SRCS_GENERATED ${project_MOC_HEADERS})
ADD_EXECUTABLE(${project_BIN} ${project_SRCS})

TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

#INSTALL(TARGETS ${project_BIN} DESTINATION bin)
